--- a/webdev1css.css
+++ b/webdev1css.css
@@ -25,7 +25,7 @@ display: block;
 }
 .wrapper {
 	display:flex;
-	position:relative;
+	position:fixed;
 }
 .wrapper .sidebar{
 	background: #4b4276;
@@ -33,6 +33,7 @@ display: block;
 	width: 200px;
 	height: 100%;
 	padding: 30px 0;
+	margin-bottom:10px;
 }
 .wrapper .sidebar h2{
 	color: #fff;
