--- a/webdev1css.css
+++ b/webdev1css.css
@@ -12,7 +12,7 @@
 body{
 	/*background: #4b4276;*/
 	background: #00ffcc;
-	margin-bottom:10px;
+	margin-bottom:10%;
 }
 ul{
 	list-style: none;
@@ -25,7 +25,7 @@ display: block;
 }
 .wrapper {
 	display:flex;
-	position:fixed;
+	position:relative;
 }
 .wrapper .sidebar{
 	background: #4b4276;
@@ -33,7 +33,7 @@ display: block;
 	width: 200px;
 	height: 100%;
 	padding: 30px 0;
-	margin-bottom:10px;
+	
 }
 .wrapper .sidebar h2{
 	color: #fff;
